--- a/transformer/readme
+++ b/transformer/readme
@@ -5,25 +5,25 @@
 | **v0.8**  | Dual-head Transformer   | Features split into base/signal groups    | Multi-task: price + TP yield with stop loss | Accurate TP yield prediction                       |
 | **v0.95** | Dual-head Transformer   | Same feature groups as v0.8               | Multi-task: price + TP probability bins     | TP probability bins based on TP yield distribution |
 
-### Technical Architecture
+# Technical Architecture
 ## Single-Task Models (v0, v0.1)
-# Standard Transformer encoder
+### Standard Transformer encoder
 inputs → Dense(embed_dim) → Positional Encoding → 
 MultiHeadAttention → LayerNorm → FFN → LayerNorm → 
 last_token → Dense(pred_len) → price_predictions
 
-## Multi-Task Models (v0.8, v0.95)
-# Dual processing streams
+# Multi-Task Models (v0.8, v0.95)
+## Dual processing streams
 inputs → split into [base_features, signal_features]
-# Base stream (price prediction)
+## Base stream (price prediction)
 base_features → Transformer_base → price_head
-# Signal stream (trading signals)  
+## Signal stream (trading signals)  
 signal_features → Transformer_signal → trading_head
-# Final fusion
+## Final fusion
 fused = Concatenate([base_last_token, signal_last_token])
 trading_output = Dense(fused)
 
-### Key Technical Innovations
+# Key Technical Innovations
 v0 → v0.1: Feature Engineering
 Added Heikin Ashi candles for smoother price representation
 Introduced technical indicators for better market context
@@ -39,7 +39,7 @@ Probability binning: Attempted to convert TP yields to risk categories
 Soft labeling: Gaussian smoothing for label assignment
 Result: Classification approach showed limited effectiveness
 
-### Model Pairing Strategy
+# Model Pairing Strategy
 Recommended Usage
 v0.8 + v0.95: Use together as complementary models
 v0.8: Primary model for accurate TP yield prediction
